logo layout adjust - solves issues on mobile

--- a/assets/images/css/campaignsTopicsCovered.scss
+++ b/assets/images/css/campaignsTopicsCovered.scss
@@ -1,5 +1,4 @@
 /* --------------------------------------------------- CAMPAIGNS SECTION */
-
  .cc-sect { 
     background: var(--colorGrey); 
     color: var(--colorWhite);
@@ -10,13 +9,13 @@
     .cc-grid {
         display: grid;
         grid-template-areas: 
-            "peninsu kitchen"
-            "realwar gallipo"
-            "zeppeli womenin"
-            "dunkirk kurskwa"
-            "ddayove atlant";
-        gap: 4rem; 
-        grid-template-columns: 1fr 1fr;
+            "peninsu kitchen realwar"
+            "gallipo zeppeli womenin"
+            "dunkirk kurskwa ddayove"
+            "atlant atlant atlant";
+        gap: 4rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
     }
     
      h3 { margin-bottom: 20px; }
