--- a/assets/images/css/styles.css
+++ b/assets/images/css/styles.css
@@ -108,9 +108,10 @@ img {
 }
 .cc-sect .cc-grid {
   display: grid;
-  grid-template-areas: "peninsu kitchen" "realwar gallipo" "zeppeli womenin" "dunkirk kurskwa" "ddayove atlant";
+  grid-template-areas: "peninsu kitchen realwar" "gallipo zeppeli womenin" "dunkirk kurskwa ddayove" "atlant atlant atlant";
   gap: 4rem;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
 }
 .cc-sect h3 {
   margin-bottom: 20px;
@@ -262,4 +263,6 @@ p {
   p {
     --pFont-Size: 1em;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/*# sourceMappingURL=styles.css.map */
